Style tt HB forms

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -199,27 +199,9 @@ if (typeof jQuery === 'undefined') {
 
     $(document).ready(function () {
 
-        var url = 'https://api.rss2json.com/v1/api.json?rss_url=http%3A%2F%2Fblog.wescale.fr%2Frss%2F&api_key=snacnrx7u8smtnuy9kz5jyrtnb2nk05jrtwksog5&order_dir=desc&count=4';
-
-        $.ajax({url: url,  crossDomain: true,
-                 success: function (data) {
-                 $('#news-spin').remove();
-                var i = 0;
-                for (var i = 0; i < data.items.length; i++) {
-                    if (i > 3)
-                        break;
-                    var entry = data.items[i];
-
-                    $('#home-news').append('' +
-                            '<blockquote cite="' + entry.link + '">' +
-                            '<p class="news-date"><a href="' + entry.link + '">' + moment(entry.pubDate, "YYYY-MM-DD HH:mm:ss").format('DD.MM.YYYY') + '</a></p>' +
-                            '<h2 class="news-title"><a href="' + entry.link + '">' + entry.title + '</a></h2>' +
-                            '<p><a href="' + entry.link + '">' + entry.author + '</a></p>' +
-                            '<p class="news-readmore"><a href="' + entry.link + '">Lire la suite</a></p>' +
-                            '</blocquote>');
-                }
-
-            }});
+        $('div.hs-form-field').each(function(index){
+            $( this ).addClass( "form-group" );
+        });
 
         $('#ce-que-nous-faisons').click(function (evt) {
             evt.preventDefault();
