--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -212,6 +212,9 @@ if (typeof jQuery === 'undefined') {
             $("input[type='email']").each(function(index){
                 $( this ).addClass( "form-control" );
             });
+            $("div.hs-submit").each(function(index){
+                $( this ).addClass( "modal-footer" );
+            });
         };
 
         $('#myModal-cloud').on('show.bs.modal', modal);
