--- a/css/style.css
+++ b/css/style.css
@@ -328,14 +328,17 @@ img {
     text-transform: none;
 }
 
-.home-top .modal-dialog ul {
+.home-top .modal-dialog ul.inputs-list {
     list-style: none;
+}
+
+.home-top .modal-dialog ul.inputs-list span{
+    padding-left: 5px;
 }
 
 .home-top .modal-dialog {
     color: black;
 }
-
 
 .home-top .modal-dialog input[type="submit"] {
     float: right;
