Fix egg position in window

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     <![endif]-->
 </head>
 <body class="{{page.class}}">
-  <div id="egg-container" style="display: none;">
+  <div id="egg-container" style="display: none;position: fixed;z-index: 1;">
     <div id="game"></div>
     <!-- p class="instructions">Infectors is a sokoban-like game where you have to capture viruses in cryogenic capsules.</p -->
     <p class="instructions">CONTROLS</p>
