--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gridder/1.4.2/js/jquery.gridder.min.js"></script>
 
     <![endif]-->
 </head>
@@ -64,7 +65,7 @@
                 <li><a href="{{ "/formations.html"| relative_url }}">Formations</a></li>
                 <li><a href="{{ "/services.html" | relative_url }}">Services</a></li>
                 <li><a href="{{ "/recrutement.html"| relative_url }}">Recrutement</a></li>
-                <li><a href="{{"/a-propos.html" | relative_url }}">Histoire</a></li>
+                <li><a href="{{"/mission.html" | relative_url }}">Mission</a></li>
                 <!--<li><a href="{{"/expertises.html" | relative_url }}">Expertises</a></li>-->
                 <li><a href="http://blog.wescale.fr/">Blog</a></li>
                 <li><a href="{{ "/contact.html"| relative_url }}">Contact</a></li>
@@ -211,212 +212,27 @@ if (typeof jQuery === 'undefined') {
 
     $(document).ready(function () {
 
-        var modal = function (e) {
-            // do something...
-
-            $('div.hs-form-field').each(function(index){
-                $( this ).addClass( "form-group" );
-            });
-
-            $("input[type='text']").each(function(index){
-                $( this ).addClass( "form-control" );
-            });
-            $("input[type='email']").each(function(index){
-                $( this ).addClass( "form-control" );
-            });
-            $("div.hs-submit").each(function(index){
-                $( this ).addClass( "modal-footer" );
-            });
-        };
-
-        $('#myModal-cloud').on('show.bs.modal', modal);
-        $('#myModal-conteneurs').on('show.bs.modal', modal);
-
         $('#ce-que-nous-faisons').click(function (evt) {
             evt.preventDefault();
             $(window).scrollTo($('#etapes'), 500);
         })
+
     });
 
-    // Download TT
-    $('#tt-link-cloud').click(function (evt) {
-        evt.preventDefault();
-    });
-    $('#tt-form-cloud').submit(function (evt) {
-        evt.preventDefault();
-
-        var civilite = $("#tt-form-cloud input[type='radio'][name='civilite']:checked").val();
-        var prenom = $("#tt-form-cloud input[type='text'][name='prenom']").val();
-        var nom = $("#tt-form-cloud input[type='text'][name='nom']").val();
-        var email = $("#tt-form-cloud input[type='email'][name='email']").val();
-        var societe = $("#tt-form-cloud input[type='text'][name='societe']").val();
-        var fonction = $("#tt-form-cloud input[type='text'][name='fonction']").val();
-        var keep_inform = $("#tt-form-cloud input[type='checkbox'][name='keep-inform']:checked").val();
-        var tt = $("#tt-form-cloud input[type='hidden'][name='tt']").val();
-
-        $.ajax({
-            url: "https://docs.google.com/a/wescale.fr/forms/d/e/1FAIpQLSdqAGoPu10Md1Gf43HN-mwiaqOhqFsNthg0jHKMRDF2XUb-Kw/formResponse",
-            data: {
-                "entry.903257113": civilite, "entry.1508999386": prenom, "entry.1524301048": nom,
-                "entry.2013605525": email, "entry.10218435": societe, "entry.437077223": fonction,
-                "entry.960649226": keep_inform, "entry.314988943": tt
-            },
-            type: "POST",
-            dataType: "xml",
-            crossDomain: true,
-            statusCode: {
-                0: function () {
-                    //Success message
-                    $('#myModal-cloud').modal('hide');
-                    $.notify("Message envoyé !", "success");
-
-
-                },
-                200: function () {
-                    //Success Message
-
-                    $('#myModal-cloud').modal('hide');
-                    $.notify("Message envoyé !", "success");
-
-                }
-            }
-        });
-        $('#tt-form-cloud')[0].reset();
-    });
-
-    $('#tt-link-conteneurs').click(function (evt) {
-        evt.preventDefault();
-    });
-    $('#tt-form-conteneurs').submit(function (evt) {
-        evt.preventDefault();
-
-        var civilite = $("#tt-form-conteneurs input[type='radio'][name='civilite']:checked").val();
-        var prenom = $("#tt-form-conteneurs input[type='text'][name='prenom']").val();
-        var nom = $("#tt-form-conteneurs input[type='text'][name='nom']").val();
-        var email = $("#tt-form-conteneurs input[type='email'][name='email']").val();
-        var societe = $("#tt-form-conteneurs input[type='text'][name='societe']").val();
-        var fonction = $("#tt-form-conteneurs input[type='text'][name='fonction']").val();
-        var keep_inform = $("#tt-form-conteneurs input[type='checkbox'][name='keep-inform']:checked").val();
-        var tt = $("#tt-form-conteneurs input[type='hidden'][name='tt']").val();
-
-        $.ajax({
-            url: "https://docs.google.com/a/wescale.fr/forms/d/e/1FAIpQLSdqAGoPu10Md1Gf43HN-mwiaqOhqFsNthg0jHKMRDF2XUb-Kw/formResponse",
-            data: {
-                "entry.903257113": civilite, "entry.1508999386": prenom, "entry.1524301048": nom,
-                "entry.2013605525": email, "entry.10218435": societe, "entry.437077223": fonction,
-                "entry.960649226": keep_inform, "entry.314988943": tt
-            },
-            type: "POST",
-            dataType: "xml",
-            crossDomain: true,
-            statusCode: {
-                0: function () {
-                    //Success message
-                    $('#myModal-conteneurs').modal('hide');
-                    $.notify("Message envoyé !", "success");
-
-
-                },
-                200: function () {
-                    //Success Message
-
-                    $('#myModal-conteneurs').modal('hide');
-                    $.notify("Message envoyé !", "success");
-
-                }
-            }
-        });
-        $('#tt-form-conteneurs')[0].reset();
-    });
     {% endif %}
 
     {% if page.class == 'home' or page.class == 'job' %}
-
-    // Recruit @ Wescale
-    $('#rejoignez-nous').click(function (evt) {
-        evt.preventDefault();
-    });
 
      $('#nous-rejoindre').click(function (evt) {
             evt.preventDefault();
             $(window).scrollTo($('#rejoindre-wescale'), {duration:500, offset: -70});
         });
-    $('#rejoignez-nous-form').submit(function (evt) {
-        evt.preventDefault();
 
-        var prenom = $("#rejoignez-nous-form input[type='text'][name='prenom']").val();
-        var nom = $("#rejoignez-nous-form input[type='text'][name='nom']").val();
-        var email = $("#rejoignez-nous-form input[type='email'][name='email']").val();
-        var message = $("#rejoignez-nous-form textarea[name='message']").val();
-        $.ajax({
-            url: "https://docs.google.com/forms/d/e/1FAIpQLScTWqqHHNsZDz7uW2LnXCh-pW4Q1WdxDLG1XyZ43He0H-omnw/formResponse",
-            data: {
-                "entry.523620392": prenom, "entry.1182716048": nom,
-                "entry.2065643761": email, "entry.1592936921": message
-            },
-            type: "POST",
-            dataType: "xml",
-            crossDomain: true,
-            statusCode: {
-                0: function () {
-                    //Success message
-                    $('#rejoignez-nous-modal').modal('hide');
-                    $.notify("Message envoyé !", "success");
-
-
-                },
-                200: function () {
-                    //Success Message
-
-                    $('#rejoignez-nous-modal').modal('hide');
-                    $.notify("Message envoyé !", "success");
-
-                }
-            }
-        });
-        $('#rejoignez-nous-form')[0].reset();
-    });
     {% endif %}
 
     // If contact
     {% if page.class == 'contact' %}
-    $('#contact-form').submit(function (evt) {
 
-                evt.preventDefault();
-                var prenom = $("#contact-form input[type='text'][name='prenom']").val();
-                var nom = $("#contact-form input[type='text'][name='nom']").val();
-                var email = $("#contact-form input[type='email'][name='email']").val();
-                var subject = $("#contact-form input[type='text'][name='subject']").val();
-                var message = $("#contact-form textarea[name='message']").val();
-                var keep_inform = $("#contact-form input[type='checkbox'][name='keep-inform']:checked").val();
-
-                $.ajax({
-                    url: "https://docs.google.com/a/wescale.fr/forms/d/e/1FAIpQLSd6CjlQiqCbCCkHoAsgLELFgzM3049TYScuml0s8INALDcXkg/formResponse",
-                    data: {
-                        "entry.1505855731": prenom, "entry.57112689": nom,
-                        "entry.1247902497": email, "entry.1424141195": message,
-                        "entry.1743455706": subject, "entry.2122300207": keep_inform
-                    },
-                    type: "POST",
-                    dataType: "xml",
-                    crossDomain: true,
-                    statusCode: {
-                        0: function () {
-                            //Success message
-                            $.notify("Message envoyé !", "success");
-
-                        },
-                        200: function () {
-                            //Success Message
-                            $.notify("Message envoyé !", "success");
-
-                        }
-                    }
-                });
-                $('#contact-form')[0].reset();
-
-            }
-    );
     {% endif %}
 
     $.fn.randomize = function(selector){
@@ -431,6 +247,87 @@ if (typeof jQuery === 'undefined') {
 
     {% if page.class == 'a-propos' %}
     $('.equipe div.equipe-photo').randomize();
+    {% endif %}
+
+
+     {% if page.class == 'mission' %}
+    // this is for 2nd row's li offset from top. It means how much offset you want to give them with animation
+	var current_opened_box  = -1;
+	var current_opened_box_id  = -1;
+
+    $('#it-btn').click(function (evt) {
+        evt.preventDefault();
+        $(window).scrollTo($('#improve'), 500);
+    })
+    $('.rolldown-gallery div.portfolio-item').randomize();
+
+    $(".rolldown-gallery div.portfolio-item").each(function(id){
+        $(this).attr('data-id', id+1);
+    });
+
+	$('div.portfolio-item').click(function() {
+
+
+		var targetId = $(this).attr('data-content');
+		var boxId = $(this).attr('data-id');
+		var $this  = $(this);
+
+		var id = $(targetId);
+        var openThumb = 0;
+        if(current_opened_box == targetId) // if user click a opened box li again you close the box and return back
+        {
+            openThumb =$('#portfolio .gridder-content').height();
+            $('#portfolio .gridder-content').slideUp('fast');
+            current_opened_box = -1;
+            current_opened_box_id = -1;
+            return false;
+        } else if (current_opened_box != -1){
+            openThumb =$('#portfolio .gridder-content').height();
+            $('#portfolio .gridder-content').slideUp('fast');
+            if (boxId > 4 && current_opened_box_id > 4){
+                openThumb = 0;
+            }
+            current_opened_box = -1;
+            current_opened_box_id = -1;
+        }
+        if (boxId < 5){
+            openThumb = 0;
+        }
+
+		// save this id. so if user click a opened box li again you close the box.
+		current_opened_box = targetId;
+        current_opened_box_id = boxId;
+
+		var targetOffset = 0;
+
+       targetOffset =  $(this).offset().top - 80 - openThumb;
+
+        var itemId = $this.attr('data-id');
+        if($( window ).width()> 992){ // 4 per row
+            if (parseInt(itemId)%4 == 0){
+                $('[data-id="' +Math.floor((parseInt(itemId)/4))*4+'"]').after($(targetId));
+            } else {
+                $('[data-id="' +Math.floor((parseInt(itemId)/4)+1)*4+'"]').after($(targetId));
+            }
+
+        }else if ($( window ).width()> 768){
+            if (parseInt(itemId)%2 == 0){
+                $('[data-id="' +Math.floor((parseInt(itemId)/2))*2+'"]').after($(targetId));
+            } else {
+                $('[data-id="' +Math.floor((parseInt(itemId)/2)+1)*2+'"]').after($(targetId));
+            }
+        }else {
+            $('[data-id="' + itemId + '"]').after($(targetId));
+        }
+
+
+		$("html:not(:animated),body:not(:animated)").animate({scrollTop: targetOffset}, 500,function(){
+
+			$(targetId).slideDown(500);
+			return false;
+		});
+
+	});
     {% endif %}
 
 }(jQuery);
