Randomize team players order

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -265,6 +265,8 @@ if (typeof jQuery === 'undefined') {
         $(this).attr('data-id', id+1);
     });
 
+    $('.equipe div.equipe-photo').randomize();
+
 	$('div.portfolio-item').click(function() {
 
 
