--- a/css/style.css
+++ b/css/style.css
@@ -315,12 +315,12 @@ img {
     padding-bottom: 40px;
 }
 
-#portfolio .portfolio-item {
+#valeurs .portfolio-item {
   right: 0;
   margin: 0 0 15px;
 }
 
-#portfolio .portfolio-item .portfolio-link {
+#valeurs .portfolio-item .portfolio-link {
   position: relative;
   display: block;
   max-width: 400px;
@@ -328,7 +328,7 @@ img {
   cursor: pointer;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover {
+#valeurs .portfolio-item .portfolio-link .portfolio-hover {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -339,11 +339,11 @@ img {
   background: rgba(9,170,147,.9);
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
+#valeurs .portfolio-item .portfolio-link .portfolio-hover:hover {
   opacity: 1;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
+#valeurs .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
   font-size: 20px;
   position: absolute;
   top: 50%;
@@ -354,16 +354,16 @@ img {
   color: white;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
+#valeurs .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
   margin-top: -12px;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
+#valeurs .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
+#valeurs .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
   margin: 0;
 }
 
-#portfolio .portfolio-item .portfolio-caption {
+#valeurs .portfolio-item .portfolio-caption {
   max-width: 400px;
   margin: 0 auto;
   padding: 25px;
@@ -371,23 +371,28 @@ img {
   background-color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-caption h4 {
+#valeurs .portfolio-item .portfolio-caption h4 {
   margin: 0;
   text-transform: none;
 }
 
-#portfolio .portfolio-item .portfolio-caption p {
+#valeurs .portfolio-item .portfolio-caption p {
   font-size: 16px;
   font-style: italic;
   margin: 0;
   font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-#portfolio .gridder-content {
+#valeurs .gridder-content {
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: white;
     font-size: 18px;
+}
+
+#valeurs a {
+    text-decoration: none;
+    color: black;
 }
 
 .middle{
