--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
             <ul class="nav navbar-nav menu-links">
                 <li><a href="{{ "/formations.html"| relative_url }}">Formations</a></li>
                 <li><a href="{{ "/services.html" | relative_url }}">Services</a></li>
-                <li><a href="{{ "/recrutement.html"| relative_url }}">Recrutement</a></li>
+                <li><a href="{{ "/wetribu.html"| relative_url }}">WeTribu</a></li>
                 <li><a href="{{"/mission.html" | relative_url }}">Mission</a></li>
                 <!--<li><a href="{{"/expertises.html" | relative_url }}">Expertises</a></li>-->
                 <li><a href="http://blog.wescale.fr/">Blog</a></li>
