--- a/_layouts/formation.html
+++ b/_layouts/formation.html
@@ -43,6 +43,8 @@ layout: default
                 </table>
               </div>
               <div class="formation-block">
+                  <a href="https://www.data-dock.fr/" target="_blank"><img width="100px" src="{{"/images/formations/datadock.jpg" |
+                      relative_url}}"></a>
                 <p> Prise en charge possible<br>par votre OPCA</p>
               </div>
             </div>
