Align social links in navbar to the right

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,8 @@
                 <!--<li><a href="{{"/expertises.html" | relative_url }}">Expertises</a></li>-->
                 <li><a href="http://blog.wescale.fr/">Blog</a></li>
                 <li><a href="{{ "/contact.html"| relative_url }}">Contact</a></li>
-
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
                 <li class="socials">
                     <a href="https://twitter.com/yeswescale" title="Twitter"><i class="fa fa-twitter"
                                                                                 aria-hidden="true"></i></a>
