Refresh look'n'feel of the corporate site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,9 @@
 <!-- Navigation -->
 <nav class="navbar navbar-default">
     <div class="menu-background"></div>
+<!--
     <div class="container">
+-->
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -70,20 +72,28 @@
                 <li><a href="{{"/mission.html" | relative_url }}">Mission</a></li>
                 <!--<li><a href="{{"/expertises.html" | relative_url }}">Expertises</a></li>-->
                 <li><a href="http://blog.wescale.fr/">Blog</a></li>
-                <li><a href="{{ "/contact.html"| relative_url }}">Contact</a></li>
+                <li><a href="{{ "/contact.html"| relative_url }}">Nous contacter</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="socials">
                     <a href="https://twitter.com/yeswescale" title="Twitter"><i class="fa fa-twitter"
                                                                                 aria-hidden="true"></i></a>
+                </li>
+                 <li class="socials">
                     <a href="https://www.linkedin.com/company/wescale" title="Linkedin"><i class="fa fa-linkedin"
                                                                                            aria-hidden="true"></i></a>
+                     </li>
+                <li class="socials">
                     <a href="https://github.com/WeScale" title="Github"><i class="fa fa-github"></i></a>
+                    </li>
+                <li class="socials">
                     <a href="https://speakerdeck.com/wescale" title="Speaker Deck"><i class="fa fa-slideshare"></i></a>
                 </li>
             </ul>
         </div>
+<!--
     </div>
+-->
 </nav>
 <!-- /Navigation -->
 
